# cpp_sdl_game_base

./: .gitignore  CMakeLists.txt
.devcontainer/: .devcontainer.json  Dockerfile
cmake_modules/: FindSDL2.cmake
external_libs/: sdl2-config.cmake
src/: main.cpp
